--- a/README
+++ b/README
@@ -1,2 +1,8 @@
 2017-2-9
 test github repository
+    好吧，很久没写东西了，也该规划一下自己的职业生涯了。
+打算主攻Python的web方向，首先呢，给自己一点要求吧。
+1、在一年内熟练掌握django框架，能写出高质量的爬虫程序
+2、加大自己的前端技术栈，框架学习，Angular、React、Vue
+3、学习图形方向，WebGL，能独立写出场景。
+这大概是不算很苛刻的要求，共勉。
